# cpp-console-app

./: .clang-format  CMakeLists.txt  Doxyfile  README.md
.github/workflows/: cpp-ci.yml  create-document.yml
src/: functions.hpp  main.cpp
test/: test_sum.cpp
